--- a/doctrine/composer.json
+++ b/doctrine/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "doctrine/orm": "^2.11.0",
+        "doctrine/orm": "*",
         "doctrine/dbal": "^3.2",
         "symfony/yaml": "^5.4",
         "symfony/cache": "^5.4"
